<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="440dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ContentTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sample_title"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContentAuthor" />

            <TextView
                android:id="@+id/ContentText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sample_text_small"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContentTitle" />

            <ImageView
                android:id="@+id/ContentPicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContentText"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <TextView
                android:id="@+id/ContentAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="u/JohnSample"
                android:textColor="@color/colorTextSecondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/ContentScore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ContentScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="2dp"
                android:text="@string/sample_count_2"
                android:textColor="@color/colorTextTertiary"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/ContentAuthor"
                app:layout_constraintEnd_toStartOf="@+id/ContentScoreLabel"
                app:layout_constraintStart_toEndOf="@+id/ContentAuthor"
                app:layout_constraintTop_toTopOf="@+id/ContentAuthor" />

            <Switch
                android:id="@+id/ContentSavedState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="false"
                android:showText="false"
                android:splitTrack="false"
                android:text="@string/label_save"
                android:textColor="@color/colorTextTertiary"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="@+id/ContentScoreLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ContentScoreLabel"
                tools:checked="false" />

            <TextView
                android:id="@+id/ContentScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/label_upvotes"
                android:textColor="@color/colorTextTertiary"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/ContentScore"
                app:layout_constraintStart_toEndOf="@+id/ContentScore"
                app:layout_constraintTop_toTopOf="@+id/ContentScore" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ContentPicture" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>